--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0px 20px;
-  background: rgba(250, 17, 17, 0.925);
+  background: maroon;
 }
 
 .profile {
