--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,32 @@
   
 }
 
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.previous {
+  background-color: maroon;
+  color: white;
+}
+
+.next {
+  background-color: maroon;
+  color: white;
+}
+
+.round {
+  border-radius: 50%;
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -95,6 +121,11 @@
 
 .recipeimg {
   opacity: 1.0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  margin-top: 10px;
 }
 
 .recipe {
