--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
  /* @import "bootstrap";  */
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
  
 .App {
   text-align: center;
@@ -62,6 +63,40 @@ a:hover {
   color: #61dafb;
 }
 
+.form {
+  font-family: cursive;
+  color: white
+}
+
+ 
+.isa_info, .isa_success, .isa_warning, .isa_error {
+margin: 10px 0px;
+padding:12px;
+}
+
+.isa_info {
+    color: #00529B;
+    background-color: #BDE5F8;
+}
+.isa_success {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+}
+.isa_warning {
+    color: #9F6000;
+    background-color: #FEEFB3;
+}
+.isa_error {
+    color: #D8000C;
+    background-color: #FFD2D2;
+}
+
+.isa_info i, .isa_success i, .isa_warning i, .isa_error i {
+    margin:10px 22px;
+    font-size:2em;
+    vertical-align:middle;
+}
+
 .link {
   text-decoration: none;
   font-size: 20px;
@@ -70,11 +105,6 @@ a:hover {
 
 .logo {
   font-size: 30px;
-  color: white
-}
-
-.form {
-  font-family: cursive;
   color: white
 }
 
@@ -124,7 +154,7 @@ a:hover {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 50%;
   margin-top: 10px;
 }
 
