--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,19 @@ padding:12px;
 	outline: none;
 }
 
+.popup {
+  background-color: #fefefe;
+  margin: 2% auto; /* 15% from the top and centered */
+  padding: 3px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  color: white;
+  font-family: "Lucida Console";
+}
+
+
 .recipeimg {
   opacity: 1.0;
   display: block;
