--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,9 @@
 .App {
   text-align: center;
   background-image: url("https://i5.walmartimages.com/asr/fa7379a8-ce94-4d68-88ea-7a1225de0b66_1.f40b99d05e47121a273df5250dadb121.jpeg") ;
-  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
-  
+  background-attachment: fixed;
 }
 
 a {
@@ -148,7 +146,7 @@ padding:12px;
 div.rbc-event {
   height: 100%; 
   width: 100%;
-  font-size: 10px;
+  font-size-adjust: 16px;
 }
 
 /* this shows the weeks date i.e. Feb 02-08 */
@@ -162,12 +160,12 @@ div.rbc-event {
 }
 
 div.rbc-calendar{
-  height: 800px;
+  height: 800px; 
 }
 
 /* div around rbc-calendar */
 .calendar{
-  background-color:white ;
+  background-color:rgb(255, 251, 251 ,0.5) ;  /* rgba(red,green,blue,opacity) */
   font-family: "Lucida Console";
   color: black;
   padding: 20px;
@@ -185,17 +183,22 @@ div.rbc-calendar{
 }
 
 .popup {
+  margin: 5% ;
   background-color: #fefefe;
-  margin: 2% auto; /* 15% from the top and centered */
-  padding: 3px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  color: white;
+  background-color:rgb(255, 251, 251 ,0.5) ;
+  color: black;
+  padding:10px;
   font-family: "Lucida Console";
 }
 
+
+.schedule-meal-form {
+  font-family: "Lucida Console";
+  color: black;
+  padding:10px;
+  border: 1px solid #888;
+}
 
 .recipeimg {
   opacity: 1.0;
@@ -209,7 +212,7 @@ div.rbc-calendar{
 .recipe {
   font-family: "Lucida Console";
   margin: 30px;
-  background-color: #ffffff;
+  background-color:rgb(255, 251, 251 ,0.7) ;
   border: 1px solid black;
   opacity: 0.9;
   margin: 5%;
@@ -222,17 +225,17 @@ div.rbc-calendar{
   color: white
 }
 
-.schedule-meal-form {
-  font-family: "Lucida Console";
-  color: black;
-  padding:10px;
-}
 .add-recipe-form{
   font-family: "Lucida Console";
-  opacity: 0.8;
-  background-color: white;
+  background-color:rgb(255, 251, 251 ,0.4) ;
   margin: 5%;
-  
+}
+
+.add-my-recipe-form{
+  font-family: "Lucida Console";
+  background-color:rgb(255, 251, 251 ,0.4) ;
+  margin: 5%;
+  color: black;
 }
 
 .search-icon {
