--- a/src/App.css
+++ b/src/App.css
@@ -231,7 +231,9 @@ div.rbc-calendar{
   padding:10px;
   border: 1px solid #888;
 }
+
 button {
+  padding: 5px 20px 5px 20px;
   border-style: outset;
   border-radius: 20px 40px;
   border-width: 5px;
@@ -247,8 +249,23 @@ button {
   border-color:rgb(236, 225, 126);
   font-family: "Lucida Console";
   background-color: white;
-  margin: 1%;
-  text-align: center;
+  width: 30%;
+  text-align: left;
+  padding: 20px;
+  margin: 10px;
+}
+.form-input-instructions{
+  border-style: outset;
+  border-radius: 20px 40px;
+  border-width: 5px;
+  border-color:rgb(236, 225, 126);
+  font-family: "Lucida Console";
+  background-color: white;
+  width: 30%;
+  height: 150px;
+  text-align: left;
+  padding: 20px;
+  margin: 10px;
 }
 .recipeimg {
   border-style: groove;
@@ -273,9 +290,58 @@ button {
   color: white;
 }
 
+.profile-header {
+  z-index: 1;
+  widows: 100%;
+  margin-top: 20px;
+  height: 60px;
+  background-color: rgba(151, 101, 78, 0.6);
+  padding: 5px 50px 10px 50px; 
+}
+
+.mypost{
+  font-family: "Lucida Console";
+  color: white;
+  background-color: rgba(151, 101, 78, 0.6);
+  border: 1px solid rgba(151, 101, 78, 0.7);
+  border-width: 2px;
+  margin: 30px 10px 30px 10px; /* margin -> outside the border (outter layer) */
+  padding: 100px 50px 100px 50px; /* padding -> surrounds the words */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  float: left;
+  width: 30%;
+}
+.form-check{
+  font-family: "Lucida Console";
+  color: white;
+  font-size: 30px;
+  
+}
+
+.grocery-list{
+  font-family: "Lucida Console";
+  color: white;
+  background-color: rgba(151, 101, 78, 0.6);
+  border: 1px solid rgba(151, 101, 78, 0.7);
+  border-width: 2px;
+  margin: 100px 10px 50px 10px; /* margin -> outside the border (outter layer) */
+  padding: 70px 50px 70px 50px; /* padding -> surrounds the words */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  float: left;
+  width: 98%;
+}
+
 .recipes {
   font-family: "Lucida Console";
-  color: white
+  color: white;
+  background-color: rgba(151, 101, 78, 0.6);
+  border: 1px solid rgba(151, 101, 78, 0.7);
+  border-width: 2px;
+  margin: 30px 10px 30px 10px; /* margin -> outside the border (outter layer) */
+  padding: 100px 50px 100px 50px; /* padding -> surrounds the words */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  float: left;
+  width: 30%;
 }
 
 .add-recipe-form{
