--- a/src/App.css
+++ b/src/App.css
@@ -307,7 +307,6 @@ div.rbc-calendar{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
   margin-top: 30px;
 }
 
@@ -324,13 +323,18 @@ div.rbc-calendar{
 
 /* inside of mypost */
 .recipe-img-card{ 
-  margin-top: 0px;
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 15px;
   width: 100%;
+  height: 200px;
   object-fit: cover;
 }
 
+.recipe-card-text{ 
+  height: 2em;
+}
 
 .img{
   border-radius: 80%;
